Set gap to 16px to ul, left-items/right-items to ensure there is 16px between each item on both sides of the header

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -15,7 +15,7 @@ body {
   display: flex;
   align-items: center;
   padding: 8px;
-
+  
 }
 
 .profile-image {
@@ -50,12 +50,16 @@ a {
 ul {
   list-style-type: none;
   display: flex;
+  gap: 16px;
 }
 
 .left-items {
   display: flex;
-}
+  gap: 16px;
+  }
 
 .right-items {
   display: flex;
+  gap: 16px;
+  
 }
